# kengen

./: .gitignore  Cargo.toml  Makefile  README.md
diagrams/: run-states.md
src/: dsa.rs  ecs.rs  game.rs  lib.rs  logger.rs  main.rs
src/ecs/: components.rs  systems.rs
src/ecs/components/: transformcomponent.rs
src/ecs/systems/: movementsystem.rs
src/utils/: dsa.rs  mod.rs
