[package]
name = "kengen"
version = "0.1.0"
description = "Kenny's Engine"
authors = ["kennybaron@fastmail.com"]
homepage = "https://github.com/protofarer/kli"
keywords = ["game", "engine"]
categories = ["game-engine"]
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.2", features = ["image", "mixer", "ttf"] }
chrono = "0.4.31"
lazy_static = "1.4.0"

[alias]
r = "run"
